--- a/src/contact.html
+++ b/src/contact.html
@@ -17,9 +17,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lato:400,700,900' rel='stylesheet' type='text/css'>
   <!-- Custom stylesheet -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/contact.css">
-  <link rel="stylesheet" href="css/form.css">
-
+  <link rel="stylesheet" href="css/about.css">
 </head>
 
 <body>
@@ -46,113 +44,108 @@
     </div>
   </nav>
 
-  <header id="contact-header" class="full-bg">
-    <div class="bg" style="background-image: url(images/about-bg.png)"></div>
+  <header id="about-header" class="full-bg">
+    <div class="bg" style="background-image: url(images/about-bg.png)">
+      <div class="header-overlays">
+        <h1>About us</h1>
+        <label>_________</label>
+        <h2>A few things you may want to know</h2>
+      </div>
   </header>
 
-  <section class="padding">
-    <div class="container contact">
+  <section class="padding about">
+    <h1 class="header-shadow">Who we are</h1>
+    <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1>How can we help?</h1>
-          <h4>If there are any questions about business opportunities, please let us know, and we’ll get back to you promptly.</h4>
+          <h1>Who we are</h1>
+          <h4>Mivisions International is a business service and consultant firm offering dynamic and value driven solutions to companies interested in entering the emerging markets.</h4>
         </div>
 
-        <div class="col-md-8">
-          <form id="contact-form" method="post">
-            <div class="col-md-6">
-              <label for="name">Your name<span class="required">*</span>
-              </label>
-              <input type="text" name="name" id="name" required class="form-control input-field" />
-            </div>
-            <div class="col-md-6">
-              <label for="email">Your email<span class="required">*</span>
-              </label>
-              <input type="email" name="email" id="email" required class="form-control input-field" />
-            </div>
-            <div class="col-md-12">
-              <label for="subject">Subject</label>
-              <input type="text" name="subject" id="subject" class="form-control input-field" />
-            </div>
-
-            <div for="message" class="col-md-12">
-              <label for="message">Message <span class="required">*</span>
-              </label>
-              <textarea name="message" id="message" class="form-control input-field" required rows="10"></textarea>
-            </div>
-            <div class="col-md-12">
-              <button type="submit" id="submit_btn" class="form-btn md hvr-radial-out">Send Message</button>
-            </div>
-          </form>
+        <div class="col-md-12">
+          <div class="col-md-1"><img src="images/our-solution.png">
+          </div>
+          <div class="col-md-10">
+            <p>Our solutions can be suited for companies at varying stages and levels of operation. Our core values focus on providing high quality services to our clients while sustaining a healthy and eco-friendly environment. Collaborating with companies and helping them facilitate the internationalization of their products, services and projects is our mission.</p>
+          </div>
         </div>
-        <div id="contact-details" class="col-md-4">
-          <h3>Email</h3>
-          <a href="mailto:">
-            <i class="fa fa-envelope"></i>mivisionsproject@gmail.com
-          </a>
 
-          <h3>Business Enqueries</h3>
-          <a href="tel:+358466204485">
-            <i class="fa fa-phone"></i>+358 4 66204485
-          </a>
-
-          <h3>Support</h3>
-          <a href="tel:+358466204485">
-            <i class="fa fa-phone"></i>+358 4 65765711
-          </a>
-
+        <div class="col-md-12">
+          <div class="col-md-1"><img src="images/our-target.png">
+          </div>
+          <div class="col-md-10">
+            <p>Our target in every business is to help identify opportunities for growth so to enable competitiveness of partner companies within the industry. We take pride in our excellence and well-established expertise and we assure our clientele only the best services they will ever need.</p>
+          </div>
         </div>
+
       </div>
     </div>
   </section>
 
-  <section id="company-address">
-    <div class="row">
-      <div class="col-md-4" style="background-image: url('images/helsinki.jpg')">
-        <div class="bg"></div>
-        <div class="overlays">
-          <h3>Europe</h3>
-          <h4>Helsinki, Finland 
-            <a href="tel:+358466204485">
-              <i class="fa fa-phone"></i>+358 466204485
-            </a>
-          </h4>
-          <h4>Estonia, Tallinn
-            <a href="tel:+37258176406">
-              <i class="fa fa-phone"></i>+372 58176406
-            </a>
-          </h4>
-          <h4>Brno, Czech
-            <a href="tel:+420792226751">
-              <i class="fa fa-phone"></i>+420 792226751
-            </a>
-          </h4>
-          <a href="#" class="btn">Google Maps</a>
+  <section class="padding member">
+    <h1 class="header-shadow">Meet our team</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Meet our team</h1>
+          <h4>We have a supportive and friendly team to assist you with any queries you might have.</h4>
         </div>
-      </div>
-      <div class="col-md-4" style="background-image: url('images/hcmc.jpg')">
-        <div class="bg"></div>
-        <div class="overlays">
-          <h3>Asia</h3>
-          <h4>Ho Chi Minh City, Vietnam
-            <a href="tel:+84902834677">
-              <i class="fa fa-phone"></i>+84 902 834677
-            </a>
-          </h4>
-          <a href="#" class="btn">Google Maps</a>
+
+        <div class="col-md-12 photos">
+
+          <div class="col-md-4 photo" style="background: url('images/about/phineese.png') no-repeat; background-size: cover;">
+            <div class="overlay">
+              <p>Experience with operational performance, market entry, sustainability, business strategy formulation and team building.</p>
+            </div>
+            <div class="move">
+              <h5>phineese anthony <div class="social-media pull-right"><i class="fa fa-facebook"></i><i class="fa fa-twitter"></i><i class="fa fa-google-plus"></i></div></h5>
+              <p>Founder, Operations Director</p>
+            </div>
+          </div>
+
+          <div class="col-md-4 photo" style="background: url('images/about/kadi.png') no-repeat; background-size: cover;">
+            <div class="overlay">
+              <p>Experienced with natural resource management and sustainability. Scientific report, leadership and project management</p>
+            </div>
+            <div class="move">
+              <h5>Kadi Palmik <div class="social-media pull-right"><i class="fa fa-facebook"></i><i class="fa fa-twitter"></i><i class="fa fa-google-plus"></i></div></h5>
+              <p>Sustainability Program Manager</p>
+            </div>
+          </div>
+
+          <div class="col-md-4 photo" style="background: url('images/about/theresa.png') no-repeat; background-size: cover;">
+            <div class="overlay">
+              <p>Experience with financial consulting, strategic partner management, Petroleum sourcing, manpower management, consulting for oil marketing companies</p>
+            </div>
+            <div class="move">
+              <h5>Theresa Ogudu <div class="social-media pull-right"><i class="fa fa-facebook"></i><i class="fa fa-twitter"></i><i class="fa fa-google-plus"></i></div></h5>
+              <p>Partner, Financial Consultant</p>
+            </div>
+          </div>
+
         </div>
-      </div>
-      <div class="col-md-4" style="background-image: url('images/abuja.jpg')">
-        <div class="bg"></div>
-        <div class="overlays">
-          <h3>Africa</h3>
-          <h4>Abuja, Nigeria  
-            <a href="tel:+2348063169268">
-              <i class="fa fa-phone"></i>+2348063169268
-            </a>
-          </h4>
-          <a href="#" class="btn">Google Maps</a>
+
+        <div class="col-md-12 photos">
+          <div class="col-md-4 photo" style="background: url('images/about/maria.png') no-repeat; background-size: cover;">
+            <div class="overlay">
+              <p>Experienced senior executive with a high, analytical mindset, result oriented Mainstream media planner, event manager, advocate for sustainability</p>
+            </div>
+            <div class="move">
+              <h5>Maria Ihuoma <div class="social-media pull-right"><i class="fa fa-facebook"></i><i class="fa fa-twitter"></i><i class="fa fa-google-plus"></i></div></h5>
+              <p>Public & Media Relations</p>
+            </div>
+          </div>
+          <div class="col-md-4 photo" style="background: url('images/about/duc.png') no-repeat; background-size: cover;">
+            <div class="overlay">
+              <p>Experience with business strategies, new venture development and sustainability. Sound knowledge of sourcing and marketing in Vietnam and Africa</p>
+            </div>
+            <div class="move">
+              <h5>MD Tran <div class="social-media pull-right"><i class="fa fa-facebook"></i><i class="fa fa-twitter"></i><i class="fa fa-google-plus"></i></div></h5>
+              <p>Business Operation</p>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
   </section>
@@ -257,24 +250,20 @@
     </div>
   </div>
 
-  <div class="copyright">
-    <div class="container">
-      <center>
+<div class="copyright">
+  <div class="container">
+    <center>
       <h5><span>© 2015 <a href="index.html">Mivisions.eu</a></span></h5>
-      </center>
-    </div>
-    <a href="#" class="scrollToTop"><i class="fa fa-arrow-up"></i></a>
+    </center>
   </div>
-
+  <a href="#" class="scrollToTop"><i class="fa fa-arrow-up"></i></a>
+</div>
+    
 <footer>
   <script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <script src="owl-carousel/owl.carousel.js"></script>
   <script src="js/jquery.knob.js" type="text/javascript"></script>
-  <script type="text/javascript" src="js/jquery.validate.js"></script>
-  <script>
-    $("form").validate();
-  </script>
   <!-- Custom Javascript -->
   <script src="js/core.js"></script>
   <script src="js/scrollReveal.min.js"></script>
